community/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Birth_Day__c</fullName>
        <label>Birth Day</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_Month__c</fullName>
        <label>Birth Month</label>
        <picklist>
            <picklistValues>
                <fullName>01 - January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 - May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 - June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 - July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 - August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 - September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CareGiver_Id__c</fullName>
        <label>Prophecy CareGiver Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Contact_Type__c</fullName>
        <formula>IF 
( 
(TEXT(TR1__Candidate_Status__c) == &apos;Perm Active&apos; || TEXT(TR1__Candidate_Status__c) == &apos;Perm Passive&apos; || TEXT(TR1__Candidate_Status__c) == &apos;Consult Hot&apos; || TEXT(TR1__Candidate_Status__c) == &apos;Consult Warm&apos; || TEXT(TR1__Candidate_Status__c) == &apos;Assigned&apos; || TEXT(TR1__Candidate_Status__c) == &apos;Placed&apos;), 

IF( 
(TEXT(TR1__Client_Status__c) == &apos;Not Applicable&apos; || TEXT(TR1__Client_Status__c) == &apos;Prospect&apos; || TEXT(TR1__Client_Status__c) == &apos;Past&apos; ), 
&apos;Candidate&apos;, 

IF( 
(TEXT(TR1__Client_Status__c) == &apos;Active&apos;), 
&apos;C and C&apos;, &apos;&apos;)), 
IF( 
(TEXT(TR1__Client_Status__c) == &apos;Active&apos; ), 
&apos;Client&apos; , &apos;Candidate&apos; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consol_URL__c</fullName>
        <formula>IF(ISBLANK( CareGiver_Id__c ),&apos;&apos;, 
&apos;https://tr-healthcare-demo.force.com/apex/GetCareGiverAuthURL?conId=&apos;+Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prophecy Console URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <formula>IF
(
(TEXT(TR1__Candidate_Status__c) == &apos;Prospect&apos; || 
TEXT(TR1__Candidate_Status__c) == &apos;Perm Active&apos; || 
TEXT(TR1__Candidate_Status__c) == &apos;Perm Passive&apos; || 
TEXT(TR1__Candidate_Status__c) == &apos;Consult Hot&apos; || 
TEXT(TR1__Candidate_Status__c) == &apos;Consult Warm&apos; || 
TEXT(TR1__Candidate_Status__c) == &apos;Assigned&apos; || 
TEXT(TR1__Candidate_Status__c) == &apos;Building Profile&apos; ||
TEXT(TR1__Candidate_Status__c) == &apos;Complete Profile&apos; ||
TEXT(TR1__Candidate_Status__c) == &apos;Lockdown Complete&apos; ||
TEXT(TR1__Candidate_Status__c) == &apos;Placed&apos;),

IF(
(TEXT(TR1__Client_Status__c) == &apos;Not Applicable&apos;),
IMAGE(&apos;/servlet/servlet.FileDownload?file=015280000006v2p&apos;, &apos;&apos;),

IF(
(TEXT(TR1__Client_Status__c) == &apos;Prospect&apos; || 
TEXT(TR1__Client_Status__c) == &apos;Past&apos; || 
TEXT(TR1__Client_Status__c) == &apos;Active&apos;),
IMAGE(&apos;/servlet/servlet.FileDownload?file=015280000006v2f&apos;,&apos;&apos;), &apos;&apos;)),

IF(
(TEXT(TR1__Client_Status__c) == &apos;Prospect&apos; || 
TEXT(TR1__Client_Status__c) == &apos;Past&apos; || 
TEXT(TR1__Client_Status__c) == &apos;Active&apos; ),
IMAGE(&apos;/servlet/servlet.FileDownload?file=015280000006v2a&apos;,&apos;&apos;) , &apos;&apos;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holiday_Accrued__c</fullName>
        <label>Holiday Accrued</label>
        <summarizedField>TR1__Contact_Accrual__c.TR1__Hours_Accrued__c</summarizedField>
        <summaryForeignKey>TR1__Contact_Accrual__c.TR1__Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Initial__c</fullName>
        <label>Middle Initial</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Use for giving rating to Candidate</description>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Undergrad_Year__c</fullName>
        <label>Undergrad Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>